2002-08-11  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/atom_type.h
	* kb/gnd_atom.c
	* kb/gnd_atom.h
	* parser/parser.y
	* kb/atom_identifier.h :

	  - Renamed atom_identifier to atom_type.

	  - Changed atom_type from enum to macros.

	* Makefile :

	  - Added a "set -e" to prevent make from continuing after
	    an error has occured.

	* main/Makefile :

	  - Added the kb library to be linked.

	  - Do not strip in a debug build.

	* parser/Makefile :
	* parser/parser.y :
	* parser/scanner.l :

	  - Added ifdef'ed debug output.

	  - Declared union type for yylval.

	  - Added some basic yacc actions.

	* Makefile :
	* kb/gnd_atom.h :
	* kb/gnd_atomlist.c :
	* kb/gnd_atom.c :
	* kb/Makefile :
	* kb/atom_identifier.h :
	* kb/gnd_atomlist.h :

	  - Added initial revision of the knowledge base structure for
	    ground atoms.

2002-08-10  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* main/epilog.c :
	* parser/Makefile :
	* parser/parser.y :
	* parser/parser.h :

	  - Moved vars/funcs into the main file.

2002-08-09  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* docs/sample :

	  - Added sample program.

	* datastruct/Makefile :
	* symtab/Makefile :
	* main/Makefile :

	  - Cleaned up makefiles.

	* parser/Makefile :
	* scanner.l :

	  - Instead of using lex and yacc, use flex and bison.

2002-08-08  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* parser/Makefile :
	* parser/parser.y :
	* main/Makefile :
	* main/epilog.c :
	* Makefile :

	  - Moved main function into a different file.

2002-08-07  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* docs/bnf :
	* docs/langspecs :
	* parser/parser.y :
	* parser/scanner.l :

	  - Renamed "elt" or "element" to "memb" or "member" ;
	    "cont" or "containment" to "subst" or "subset".

	* docs/bnf :
	* parser/parser.y :

	  - Took out association/parentheses from the language and parser.

2002-07-25  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* ChangeLog :

	  - ChangeLog started.

	* datastruct/indexedlist.h :